2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.c:
	* makeinfo/xml.h: new element listoffloats.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.h: number sections by default.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_xref): if a reference is being made to a
	float with only one parameter, use the float number in HTML, and
	prepend it to the link in Info outputs.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.h:
	* makeinfo/float.c (get_float_ref): new function to retrieve a float's
	number by its id.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (end_insertion): indent the first paragraph
	after @float.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c: new commands @float and @caption.

	* makeinfo/insertion.h: new environment floatenv.

	* makeinfo/insertion.c (cm_float, cm_caption): new functions.
	(begin_insertion, end_insertion): handle floatenv.

	* makeinfo/xml.c:
	* makeinfo/xml.h: new elements float, floattype, caption, floattable,
	floatfigure, floatexample.

	* makeinfo/insertion.c (cm_example):
	* makeinfo/xml.c (xml_insert_docbook_image, xml_begin_multitable):
	insert label and id attributes, title element for docbook if used
	inside @float.

	* makeinfo/xml.c: replacements for multitable and informalfigure.
	(xml_insert_element_with_attribute): special-cased float element for
	docbook to make it appear in element stack and thus enable element
	replacements inside floatenv.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.c:
	* makeinfo/float.h: new files for float environment functions.

	* makeinfo/Makefile.am: added new files to makeinfo_SOURCES.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_xref): xstrdup the result from
	xml_get_assoc_for_id, as it gets freed later.

	* makeinfo/xml.c (xml_get_assoc_for_id, xml_associate_title_with_id):
	reimplemented unnumbered_labels handling.